--- a/templates/register.html
+++ b/templates/register.html
@@ -8,31 +8,27 @@
         <div class="card">
             <div class="card-header">회원가입</div>
             <div class="card-body">
-                <form>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">이메일 주소</label>
-                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-                    </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">비밀번호</label>
-                        <input type="password" class="form-control" id="password">
-                    </div>
-                    <div class="mb-3">
-                        <label for="confirmPassword" class="form-label">비밀번호 확인</label>
-                        <input type="password" class="form-control" id="confirmPassword">
-                    </div>
-                    <div class="mb-3">
-                        <label for="name" class="form-label">이름</label>
-                        <input type="text" class="form-control" id="name">
-                    </div>
-                    <div class="mb-3">
-                        <label for="nickname" class="form-label">닉네임</label>
-                        <input type="text" class="form-control" id="nickname">
-                    </div>
-                    <div class="mb-3">
-                        <label for="phoneNumber" class="form-label">전화번호</label>
-                        <input type="tel" class="form-control" id="phoneNumber">
-                    </div>
+                <form method="post">
+                    {% csrf_token %}
+                    {% if form.non_field_errors %}
+                        <div class="alert alert-danger" role="alert">
+                            {% for error in form.non_field_errors %}
+                                {{ error }}
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                    {% for field in form %}
+                        <div class="mb-3">
+                            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                            {{ field }}
+                            {% if field.help_text %}
+                                <div class="form-text">{{ field.help_text }}</div>
+                            {% endif %}
+                            {% for error in field.errors %}
+                                <div class="invalid-feedback d-block">{{ error }}</div>
+                            {% endfor %}
+                        </div>
+                    {% endfor %}
                     <button type="submit" class="btn btn-primary">회원가입</button>
                 </form>
             </div>
