--- a/templates/transactions_list.html
+++ b/templates/transactions_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load humanize %}
 
 {% block title %}거래 내역{% endblock %}
 
@@ -6,10 +7,11 @@
 <div class="row">
     <div class="col-md-12">
         <h1>거래 내역</h1>
+        {% if transactions %}
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th scope="col">날짜</th>
+                    <th scope="col">ID</th>
                     <th scope="col">계좌</th>
                     <th scope="col">유형</th>
                     <th scope="col">금액</th>
@@ -19,27 +21,22 @@
                 </tr>
             </thead>
             <tbody>
+                {% for transaction in transactions %}
                 <tr>
-                    <td>2025-08-29</td>
-                    <td>123-456-7890</td>
-                    <td>입금</td>
-                    <td>+₩ 100,000</td>
-                    <td>₩ 1,100,000</td>
-                    <td>월급</td>
-                    <td>계좌이체</td>
+                    <td>{{ transaction.id }}</td>
+                    <td>{{ transaction.account.account_number }}</td> {# Access related account's number #}
+                    <td>{{ transaction.transaction_type }}</td>
+                    <td>₩ {{ transaction.amount|floatformat:0|intcomma }}</td>
+                    <td>₩ {{ transaction.balance_after|floatformat:0|intcomma }}</td>
+                    <td>{{ transaction.transaction_detail|default:"-" }}</td> {# Display "-" if detail is empty #}
+                    <td>{{ transaction.transaction_method }}</td>
                 </tr>
-                <tr>
-                    <td>2025-08-28</td>
-                    <td>123-456-7890</td>
-                    <td>출금</td>
-                    <td>-₩ 25,000</td>
-                    <td>₩ 1,075,000</td>
-                    <td>식비</td>
-                    <td>카드결제</td>
-                </tr>
-                <!-- Add more rows as needed -->
+                {% endfor %}
             </tbody>
         </table>
+        {% else %}
+        <p>등록된 거래 내역이 없습니다.</p>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
