--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
     <title>{% block title %}가계부 시스템{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap Icons CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         /* Custom styles for a cleaner look */
         body {
@@ -48,10 +50,13 @@
                         <a class="nav-link" href="/transactions/">거래내역</a> {# Link to transactions list #}
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/users/detail/">환영합니다, {{ user.nickname }}님!</a> {# Link to user detail/profile #}
+                        <a class="nav-link" href="{% url 'profile' %}">환영합니다, {{ user.nickname }}님!</a> {# Link to user detail/profile #}
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/users/logout/">로그아웃</a> {# Link to logout #}
+                        <form action="/users/logout/" method="post" style="display: inline;">
+    {% csrf_token %}
+    <button type="submit" class="nav-link" style="background: none; border: none; padding: 0; color: inherit; cursor: pointer;">로그아웃</button>
+</form>
                     </li>
                     {% else %}
                     <li class="nav-item">
